# POCBot

./: .gitignore  Cargo.toml  Dockerfile  InteractionHandler.cs  POCBotButCSharp.csproj  Program.cs  README.md  ServerStatucChecker.cs
.github/workflows/: dotnet.yml  rust.yml
commands/: InfoModule.cs
src/: main.rs
src/commands/: checkServer.rs  mod.rs  news.rs  ping.rs  register.rs
