[package]
name = "pocbot"
version = "0.1.0"
authors = ["Scott Gould <greysilly7@gmail.com>"]
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
json = "0.12.4"
poise = "0.5.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = "0.11.17"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true          # Enable Link Time Optimization
