[package]
name = "pocbot"
version = "0.1.0"
authors = ["Scott Gould <greysilly7@gmail.com>"]
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true # Enable Link Time Optimization
panic = "abort" # Abort on panic
opt-level = "z" # Optimize for size
